Kubernetes/Proof-of-Concept/minikube/minikube/K8s/yaml/external-name-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-name-service
  namespace: prod
spec:
  type: ExternalName
  externalName: external.name.service.com
