Kubernetes/Proof-of-Concept/minikube/minikube/K8s/yaml/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
spec:
  selector:
    app.kubernetes.io/name: load-balancer-service-app
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3000
      # You can configure a load balanced Service to omit assigning a node port, provided that the cloud provider implementation supports this.
      # nodePort: 30010
  clusterIP: 10.96.0.11
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
